--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="neutral">#316BFF</color>
+    <color name="correct">#31FF62</color>
+    <color name="wrong">#FF3161</color>
     <color name="blue_200">#81D4FA</color>
 </resources>
